<resources>
    <string name="app_name">StoryApp</string>

    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to share your story with various people in the world? Do it in this application</string>
    <string name="title_welcome_page">Welcome to StoryApp!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready to share your story?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Welcome to StoryApp! 😆</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="addbutton">add button</string>
    <string name="image">Image</string>
    <string name="storyapp">StoryApp</string>
    <string name="logout_button">Logout</string>
    <string name="camera_button">camera</string>
    <string name="gallery_button">gallery</string>
    <string name="description_input">description</string>
    <string name="story_image">story image</string>
    <string name="upload_button">upload button</string>
    <string name="detail_image">detail image</string>
    <string name="description">description</string>
    <string name="login_image">login image</string>
    <string name="signup_image">signup image</string>
    <string name="splash_screen">Story App</string>
    <string name="welcome_image">welcome_image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_button">Maps Button</string>
    <string name="retry">Try Again</string>
    <string name="include_current_location">Include current location</string>
</resources>